--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,7 @@ p {
 /* TODO: size images manually so this is not necessary */
 img {
   max-height: 20rem;
+margin: 0;
 }
 
 /***************** NAV *****************/
@@ -23,12 +24,10 @@ nav a:hover {
 /**************** HERO *****************/
 
 header img {
-  max-height: 6rem;
+  max-height: 9rem;
+  float: left;
 }
 
-h1 .logo-w {
-  font-size: 3.5rem;
-}
 
 /**************** ASIDE ****************/
 
@@ -37,7 +36,7 @@ input[type="submit"] {
   background-color: #3D7FCF;
   border: 1px solid #3D7FCF;
   border-radius: 5px;
-  font-size: .75rem;
+  font-size: 1.5rem;
   color: white;
 }
 
@@ -58,4 +57,35 @@ h3 {
   font-size: 1.2rem;
   text-align: center;
   color: #2d2d2d;
+}
+.logo .navbar-brand {
+  height: 80px;
+}
+
+.logo .nav >li >a {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.logo h1 {
+
+ color: white;
+   }
+
+.logo img {
+  float: left;
+
+    height: 100px;
+   }
+
+   .col-md-6,.offset-md-0{
+     border: 1px solid black;
+
+   }
+aside {
+    height: 100%;
+    position: fixed;
+    background-color: gray;
+    width: 230px;
+    color: black;
 }
