--- a/styles/main.css
+++ b/styles/main.css
@@ -87,7 +87,15 @@ h3 {
 aside {
     height: 100%;
     position: fixed;
-    background-color: gray;
-    width: 230px;
+    background-color: #33b5e5;
+    width: 20%;
     color: black;
+}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    aside {
+        width: 20%;
+        position: absolute;
+    }
 }
